--- a/package.json
+++ b/package.json
@@ -15,32 +15,60 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.10.1",
+    "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "@tanstack/react-query": "^5.56.2",
-    "axios": "^1.7.7",
-    "expo": "~51.0.28",
+    "@shopify/react-native-skia": "1.2.3",
+    "@supabase/supabase-js": "^2.44.4",
+    "@tanstack/react-query": "^5.51.11",
+    "@types/lodash": "^4.17.7",
+    "@types/numeral": "^2.0.5",
+    "axios": "^1.7.3",
+    "base64-arraybuffer": "^1.0.2",
+    "date-fns": "^3.6.0",
+    "expo": "~51.0.34",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
+    "expo-image": "~1.13.0",
+    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "react-redux": "^9.1.2",
-    "tailwindcss": "3.3.2"
+    "styled-components": "^6.1.12",
+    "tailwindcss": "3.3.2",
+    "victory-native": "^41.0.2",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -48,7 +76,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
